# kaggle-template

./: .dockerignore  .env.example  .envrc  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  docker-compose.yml  feature_engineering.py  justfile  mise.toml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml  train.py
conf/: data_processor.yaml  inference.yaml  train.yaml
conf/callbacks/: lightgbm.yaml
conf/experiment/: example.yaml  exp001.yaml
conf/logger/: wandb.yaml
conf/model/: cb_multiclass.yaml  cb_regression.yaml  lgb_base.yaml  lgb_binary.yaml  lgb_multiclass.yaml  lgb_regression.yaml  xgb_base.yaml
conf/path/: kaggle.yaml  local.yaml
configs/: config.yaml  default.yaml
configs/cv/: kfold.yaml  sgkfold.yaml  skfold.yaml
configs/experiment/: example.yaml
configs/logger/: wandb.yaml
configs/model/: cb_base.yaml  cb_binary.yaml  lgb_base.yaml  lgb_binary.yaml  lgb_multiclass.yaml  lgb_regression.yaml  xgb_base.yaml  xgb_binary.yaml  xgb_multiclass.yaml  xgb_regression.yaml
exp/exp001/: config.yaml  data_processor.py  inference.py  train.py
exp/exp001/configs/: run0.yaml
exp/v1/: feature_engineering.py  train.py
notebook/: eda.ipynb  image.ipynb  nlp.ipynb  sample_atma15.ipynb  table.ipynb  table1.ipynb  table2.ipynb
run/: data_processor.py  train.py
src/: cv.py  data_processor.py  inference.py  models.py  train.py  utils.py  visualize.py
src/features/: base.py  dim_compresssion.py  encode.py  encoder.py  nlp.py  timeseries.py
src/models/: gbdt.py  gcn.py  mlp.py
src/tools/: calc_submission_time.py  upload_code.py  upload_model.py
src/utils/: common.py  split.py  visualize.py
tests/: test_train.py
