[tool.poetry]
name = "kaggle-template"
version = "0.1.0"
description = ""
authors = ["Kyohei Uto <h27.kubb@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10, <3.12"
torch = {version = "^2.0.1+cu118", source = "torch_cu118"}
torchvision = {version = "^0.15.2+cu118", source = "torch_cu118"}
torchaudio = {version = "^2.0.2+cu118", source = "torch_cu118"}
torch-geometric = "^2.3.1"
transformers = "^4.31.0"
polars = "^0.20.0"
ipykernel = "^6.24.0"
lightgbm = "^4.0.0"
xgboost = "^1.7.6"
catboost = "^1.2"
seaborn = "^0.12.2"
wandb = "^0.15.5"
hydra-core = "^1.3.2"
gensim = "^4.3.1"
matplotlib-venn = "^0.11.9"
sweetviz = "^2.1.4"
levenshtein = "^0.21.1"
tensorflow = "^2.13.0"
tensorflow-text = "^2.13.0"
umap-learn = "^0.5.3"
ydata-profiling = "^4.3.2"
shap = "^0.42.1"
kaggle = "^1.5.16"
japanize-matplotlib = "^1.1.3"
pyarrow = "^15.0.0"
lightning = "^2.1.3"
rich = "^13.7.0"
pre-commit = "^3.6.0"
pydantic = "^2.6.0"
mypy = "^1.8.0"
ruff = "^0.2.0"
pytest = "^8.1.1"



[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]
